Fix: page display did not fit device screen

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -6,6 +6,7 @@
 
 body {
     background-color: antiquewhite;
+    max-width: 100%;
 }
 
 .header {
